# Colorful-Control

./: .gitignore  AGENTS.md  LICENSE  PRODUCT.md  README.md  pyproject.toml
colorful_control/: __init__.py  app.py  config.py  controller.py  models.py  service.py
colorful_control/animations/: __init__.py  base.py  breath.py  cycle.py  off.py  rainbow.py  solid.py  strobe.py
colorful_control/backends/: __init__.py  base.py  linux.py  windows.py
colorful_control/cli/: __init__.py
colorful_control/daemon/: __init__.py
colorful_control/gui/: __init__.py
colorful_control/tray/: __init__.py
docs/: README.md
tests/: __init__.py
